Responsive overflow fix

--- a/media.css
+++ b/media.css
@@ -20,7 +20,6 @@
 
     * {
         font-size: 12px;
-        outline: red 0.5px solid;
     }
 
     .video-frame iframe {
